--- a/contents/korean/00.md
+++ b/contents/korean/00.md
@@ -1,1 +1,19 @@
-dfdfd
+당신의 도(道) 찾기
+
+책에서 논의한 바와 같이, 선형적인 책 서사는 모든 독자를 단일 학습 경로로 강제하는 단점이 있습니다. 온라인 버전은 하이퍼링크를 통해 이를 해결할 수 있지만, 실제 책을 소지한 독자는 이를 탐색하는 데 더 어려움을 겪을 수 있습니다. 이를 부분적으로 해결하기 위해 텍스트를 '순환적'으로 구성하여 독자가 다양한 지점에서 시작해 읽고, 끝부분에서 '이전' 자료로 되돌아갈 수 있도록 했습니다.
+
+특히 다음과 같이 권장합니다:
+- 주제별, 정치적 또는 시사적 관심이 있는 독자는 책의 서문에서 시작하여 쭉 읽어 나가는 것이 좋습니다.
+- 개념적, 이론적 또는 광범위한 지적 관심이 있는 독자는 1부와 2부를 건너뛰고 3부에서 시작하는 것이 좋습니다.
+- 기술적, 기술적 또는 공학적 초점이 있는 독자는 4부에서 시작하는 것이 좋습니다.
+- 구체적인 기술 및 그 응용에 관심이 있는 독자는 5부에서 시작하는 것이 좋습니다.
+- 특정 사회 부문에서의 실제 영향에 관심이 있는 독자는 6부에서 시작하는 것이 좋습니다.
+- 공공 정책, 정부 및 사회 동원에 초점을 맞춘 독자는 7부에서 시작하는 것이 좋습니다.
+
+시작 지점에 관계없이, 대부분의 독자는 시작한 곳에서 가치를 발견하면 계속 읽어 나가고, '나중' 부분의 이론적 프레임워크를 이전 자료로 채우는 것이 유익하다고 느낄 것입니다.
+
+이 책은 살아있는 문서입니다. 인쇄본을 읽고 있다면 최신 정보가 아닐 가능성이 높으므로 https://www.plurality.net/에서 최신 버전을 읽거나 무료로 다운로드할 수 있습니다.
+
+더 중요한 것은, 독자 여러분이 이 프로젝트의 협력자로 참여해 주시기를 바랍니다. 텍스트에 대한 문제나 개선 사항을 '이슈'로 제출하여 커뮤니티가 우선순위를 정하거나 '풀 리퀘스트'로 수정을 제출할 수 있습니다. 모든 기여는 인정되며, 아래 설명한 대로 기여자에게 인식 및 관리 권한을 부여합니다.
+
+우리가 실수했다면 그것을 초대장으로 받아들여 주세요. 우리가 틀렸다고 생각하면 바로 잡아 주세요. 우리의 언어가 여러분의 커뮤니티와 맞지 않다면 여러분의 언어로 된 버전을 만들어 주세요. 커뮤니티와 관계를 맺고 싶지 않다면, 자료에는 저작권이 없으므로 원하는 것을 가져가고 나머지는 남겨 두세요. "왜 아무도 이것을 하지 않나요?"라고 묻지 마세요. 여러분이 바로 그 '아무도'입니다.
