--- a/contents/korean/00.md
+++ b/contents/korean/00.md
@@ -1,4 +1,6 @@
-당신의 도(道) 찾기
+# 당신의 도(道) 찾기
+>
+>
 
 책에서 논의한 바와 같이, 선형적인 책 서사는 모든 독자를 단일 학습 경로로 강제하는 단점이 있습니다. 온라인 버전은 하이퍼링크를 통해 이를 해결할 수 있지만, 실제 책을 소지한 독자는 이를 탐색하는 데 더 어려움을 겪을 수 있습니다. 이를 부분적으로 해결하기 위해 텍스트를 '순환적'으로 구성하여 독자가 다양한 지점에서 시작해 읽고, 끝부분에서 '이전' 자료로 되돌아갈 수 있도록 했습니다.
 
