--- a/contents/korean/0-0-추천사.md
+++ b/contents/korean/0-0-추천사.md
@@ -70,9 +70,7 @@
 <br></br>
 
 > 기술이 미래의 문화와 민주주의에 미칠 영향은 명백합니다. 우리는 그것들과 함께 살아가는 다원적 비전이 부족합니다! 다행히도 이 책은 그 원칙을 구현하고 있습니다. 마치 AI처럼, 이 책은 부분의 합보다 더 위대한 기념비적 공동 성취입니다.<br></br>
-— [홀리
-
- 헌든](https://en.wikipedia.org/wiki/Holly_Herndon), 음악가, 예술가, [*Interdependence*](https://interdependence.fm/) 공동 호스트 및 [Spawning](https://spawning.ai/) 공동 창립자
+— [홀리헌든](https://en.wikipedia.org/wiki/Holly_Herndon), 음악가, 예술가, [*Interdependence*](https://interdependence.fm/) 공동 호스트 및 [Spawning](https://spawning.ai/) 공동 창립자
 
 <br></br>
 
