--- a/contents/korean/0-0-추천사.md
+++ b/contents/korean/0-0-추천사.md
@@ -140,9 +140,7 @@
 <br></br>
 
 > 불안과 분열의 시대에, 글렌 웨일과 오드리 탕은 기술과 민주주의가 조화롭게 어우러져 더 나은 미래로 나아갈 수 있는 드문, 현실적인 비전을 제공합니다.<br></br>
-— [트리스탄 해리스](https://en.wikipedia.org/wiki/Tristan_Harris), [인간 기술 센터](https://en.wikipedia.org/wiki/Center_for_Humane_Technology) 공동 창립자, 다큐멘터리 [*소셜
-
- 딜레마*](https://www.thesocialdilemma.com/) 주연
+— [트리스탄 해리스](https://en.wikipedia.org/wiki/Tristan_Harris), [인간 기술 센터](https://en.wikipedia.org/wiki/Center_for_Humane_Technology) 공동 창립자, 다큐멘터리 [*소셜딜레마*](https://www.thesocialdilemma.com/) 주연
 
 <br></br>
 
