--- a/contents/korean/0-0-추천사.md
+++ b/contents/korean/0-0-추천사.md
@@ -4,7 +4,7 @@
 
 >
 
-> 광활하고 무한한 *다원성*의 세계에서, 각 삶은 고유하고 소중한 존재입니다...외부 상황이 아무리 위험할지라도...(우리 함께) 공유된 선함의 씨앗이 땅을 뚫고 나와 공감, 기쁨, 조화의 꽃으로 피어나게 하도록 긍정적인 행동을 취합시다.<br></br>
+> 광활하고 무한한 *다원성*의 세계에서, 각 삶은 고유하고 소중한 존재입니다.외부 상황이 아무리 위험할지라도..(우리 함께) 공유된 선함의 씨앗이 땅을 뚫고 나와 공감, 기쁨, 조화의 꽃으로 피어나게 하도록 긍정적인 행동을 취합시다.<br></br>
 — 제14대 [달라이 라마](https://www.dalailama.com/) (티베트)
 
 <br></br>
@@ -24,12 +24,12 @@
 
 <br></br>
 
-> *다원성*은 마치 현실에서 이미 일어나고 있는 낙관적인 SF 소설처럼 읽힙니다! 세계의 민주국가들이 대만의 발자취를 따라 디지털 시대를 위해 자유 사회를 업그레이드할 수 있을까요? 해피 엔딩을 기대해 봅니다.<br></br>
+> *다원성*은 마치 현실에서 이미 일어나고 있는 낙관적인 SF 소설처럼 읽힙니다. 세계의 민주국가들이 대만의 발자취를 따라 디지털 시대를 위해 자유 사회를 업그레이드할 수 있을까요? 해피 엔딩을 기대해 봅니다.<br></br>
 — [조셉 고든-레빗](https://en.wikipedia.org/wiki/Joseph_Gordon-Levitt), 에미상 수상 예술가이자 [HITRECORD](https://hitrecord.org/) 창립자
 
 <br></br>
 
-> *다원성*은... 아프리카적 관점에서 협력을 가속화할 수 있는 잠재적 글로벌 촉매입니다... 21세기를 아프리카의 세기로 만들기 위해 도전을 받아들인 아프리카 사상가들에게 꼭 읽어야 하고 함께 창작해야 할 책입니다.<br></br>
+> *다원성*은... 아프리카적 관점에서 협력을 가속화할 수 있는 잠재적 글로벌 촉매입니다. 21세기를 아프리카의 세기로 만들기 위해 도전을 받아들인 아프리카 사상가들에게 꼭 읽어야 하고 함께 창작해야 할 책입니다.<br></br>
 — [오비 에젹웨실리](https://en.wikipedia.org/wiki/Oby_Ezekwesili), [국제 투명성 기구](https://www.transparency.org/en) 공동 창립자, [#BringBackOurGirls](https://bringbackourgirls.ng/) 창립자, [정치, 정책 및 거버넌스 학교](https://thesppg.org/our-program/) 및 [#FixPolitics](https://www.fixpolitics.org/) 창립자이자 나이지리아 정치 지도자
 
 <br></br>
@@ -54,7 +54,7 @@
 
 <br></br>
 
-> 만약 사회 정의 운동에서 우리의 가장 소중한 꿈들이 실현되었다면 세상은 어떤 모습일까요? 저자들은 민주주의를 재발명하기 위한 급진적이지만 실용적인 해결책을 제시합니다... 일부는 이미 실현되어 진정한 변화를 위한 등대 역할을 하고 있습니다.<br></br>
+> 만약 사회 정의 운동에서 우리의 가장 소중한 꿈들이 실현되었다면 세상은 어떤 모습일까요? 저자들은 민주주의를 재발명하기 위한 급진적이지만 실용적인 해결책을 제시합니다. 일부는 이미 실현되어 진정한 변화를 위한 등대 역할을 하고 있습니다.<br></br>
 — [스타브 샤피르](https://en.wikipedia.org/wiki/Stav_Shaffir), [이스라엘 사회 정의 시위](https://en.wikipedia.org/wiki/2011_Israeli_social_justice_protests) 지도자이자 Knesset 최연소 여성 의원
 
 <br></br>
@@ -89,7 +89,7 @@
 
 <br></br>
 
-> 저자들은 숨 막히는 가능성의 멋진 책을 썼으며, 어두운 시대에 희망을 제시합니다... 수학에서 문학에 이르기까지 다양한 학문을 활용하여 독자들은 많은 것을 생각하고 도전할 수 있습니다... 독자들은 이 대화에 참여하도록 초대됩니다!<br></br>
+> 저자들은 숨 막히는 가능성의 멋진 책을 썼으며, 어두운 시대에 희망을 제시합니다. 수학에서 문학에 이르기까지 다양한 학문을 활용하여 독자들은 많은 것을 생각하고 도전할 수 있습니다. 독자들은 이 대화에 참여하도록 초대됩니다!<br></br>
 — [앤 마리 슬로터](https://en.wikipedia.org/wiki/Anne-Marie_Slaughter), [뉴 아메리카 재단](https://www.newamerica.org/) CEO, 전 미국 국무부 정책기획국장, [*미완성 업무*](https://www.penguinrandomhouse.com/books/225053/unfinished-business-by-anne-marie-slaughter/) 및 [*체스 보드와 웹*](https://yalebooks.yale.edu/book/9780300234664/the-chessboard-and-the-web/) 저자
 
 <br></br>
@@ -109,7 +109,7 @@
 
 <br></br>
 
-> 전 세계 포퓰리스트들은 기술을 사용해 국가를 분열시킵니다... *다원성*은 우리가 기술을 사용해 더 연결되고 인간성을 회복할 수 있는 새로운 여정을 초대합니다. 아프리카에서는 이를 '우분투'라고 부릅니다.<br></br>
+> 전 세계 포퓰리스트들은 기술을 사용해 국가를 분열시킵니다. *다원성*은 우리가 기술을 사용해 더 연결되고 인간성을 회복할 수 있는 새로운 여정을 초대합니다. 아프리카에서는 이를 '우분투'라고 부릅니다.<br></br>
 — [무시 마이마네](https://en.wikipedia.org/wiki/Mmusi_Maimane), 남아프리카 공화국 대통령 후보, 전 야당 지도자, [Build One South Africa](https://www.bosa.co.za/) 창립자, 리버티 교회의 목사 및 장로
 
 <br></br>
@@ -119,7 +119,7 @@
 
 <br></br>
 
-> 이 책은 기술이 우리의 삶을 어떻게 형성했는지, 하고 있는지, 할 것인지, 그리고 해야 하는지에 대한 깊고 새로운 통찰을 제공합니다. 방대한 증거를 바탕으로 다원성을 촉진해야 하는 강력한 주장을 펼칩니다... 모든 이에게 중요한 교훈을 제공합니다.<br></br>
+> 이 책은 기술이 우리의 삶을 어떻게 형성했는지, 하고 있는지, 할 것인지, 그리고 해야 하는지에 대한 깊고 새로운 통찰을 제공합니다. 방대한 증거를 바탕으로 다원성을 촉진해야 하는 강력한 주장을 펼칩니다. 모든 이에게 중요한 교훈을 제공합니다.<br></br>
 — [콜린 메이어](https://en.wikipedia.org/wiki/Colin_Mayer), 옥스퍼드 사이드 비즈니스 스쿨 경영학 교수, [*번영: 더 나은 비즈니스가 더 큰 선을 만든다*](https://global.oup.com/academic/product/prosperity-9780198866824?lang=en&cc=sk) 저자
 
 <br></br>
@@ -134,7 +134,7 @@
 
 <br></br>
 
-> 대만, 세계에서 가장 저평가된 민주주의에서 영감을 받아, *다원성*은 디지털 기술을 활용해 더 민주적인 미래를 만들 수 있다는 강력한 주장을 펼칩니다... 이 훌륭한 책을 읽은 후 새로운 긴급감을 느꼈지만, 동시에 진정한 희망의 이유를 제공받았습니다.<br></br>
+> 대만, 세계에서 가장 저평가된 민주주의에서 영감을 받아, *다원성*은 디지털 기술을 활용해 더 민주적인 미래를 만들 수 있다는 강력한 주장을 펼칩니다. 이 훌륭한 책을 읽은 후 새로운 긴급감을 느꼈지만, 동시에 진정한 희망의 이유를 제공받았습니다.<br></br>
 — [스티븐 레비츠키](https://en.wikipedia.org/wiki/Steven_Levitsky), 하버드 대학교 정치학 교수, [*어떻게 민주주의가 죽는가*](https://www.penguinrandomhouse.com/books/562246/how-democracies-die-by-steven-levitsky-and-daniel-ziblatt/) 및 [*소수의 폭정*](https://www.penguinrandomhouse.com/books/706046/tyranny-of-the-minority-by-steven-levitsky-and-daniel-ziblatt/) 공동 저자
 
 <br></br>
@@ -159,7 +159,7 @@
 
 <br></br>
 
-> 낙관적이면서도 실용적인 *다원성*은 AI 시대를 위한 민주주의를 재구성하는 로드맵을 제공합니다... 우리는 자유주의적 또는 권위주의적 비전에만 국한될 필요가 없습니다... 개방성, 다원성, 인간 정신에 기댄 제3의 길을 제시합니다. 정말 읽을 가치가 있습니다!<br></br>
+> 낙관적이면서도 실용적인 *다원성*은 AI 시대를 위한 민주주의를 재구성하는 로드맵을 제공합니다... 우리는 자유주의적 또는 권위주의적 비전에만 국한될 필요가 없습니다. 개방성, 다원성, 인간 정신에 기댄 제3의 길을 제시합니다. 정말 읽을 가치가 있습니다!<br></br>
 — [마크 서먼](https://en.wikipedia.org/wiki/Mark_Surman), [모질라 재단](https://en.wikipedia.org/wiki/Mozilla_Foundation) 회장 겸 전무 이사
 
 <br></br>
