--- a/contents/korean/0-1-저자소개.md
+++ b/contents/korean/0-1-저자소개.md
@@ -5,3 +5,5 @@
 <br></br>
 
 ![](https://raw.githubusercontent.com/pluralitybook/plurality/main/figs/author-Community.png)
+
+이 책은 오픈 소스이며 저작자 표시 여부에 관계없이 내용을 자유롭게 복사할 수 있습니다.  이 책의 주요 저자 외에도 전 세계 ⿻ 커뮤니티의 수십 명의 구성원이 전체 작업의 대부분을 맡아 이 책에 기여했습니다.  이 기여자들은 다음 페이지에 나열되어 있으며, 각자의 얼굴이 기계적으로 합성된 타일로 표현되어 있습니다.  이 책의 무료 온라인 버전은 [https://www.plurality.net/](https://www.plurality.net/)에서 이 책에 설명된 원칙에 따라 이 커뮤니티에 의해 관리되며 계속 발전할 것입니다.
