Update 0-2-당신의 도(道) 찾기.md

--- a/contents/korean/0-2-당신의 도(道) 찾기.md
+++ b/contents/korean/0-2-당신의 도(道) 찾기.md
@@ -1,21 +1,26 @@
-# 당신의 도(道) 찾기
+# 도(道)를 찾아서
 >
 >
+책에서 논의했듯이, 선형적인 책 서술은 모든 독자에게 단일한 학습 경로를 강요한다는 큰 단점이 있습니다.  온라인 버전에서는 하이퍼링크를 광범위하게 사용하여 이러한 단점을 피할 수 있지만, 실제 책을 가지고 있는 사람들은 탐색하기가 더 어렵다는 것을 알게 될 것입니다.  이 문제를 부분적으로 완화하기 위해 독자가 다양한 지점에서 시작하여 거기서부터 읽고 마지막에 '이전' 자료로 돌아갈 수 있는 '순환적' 방식으로 텍스트를 구성했습니다.
 
-책에서 논의한 바와 같이, 선형적인 책 서사는 모든 독자를 단일 학습 경로로 강제하는 단점이 있습니다. 온라인 버전은 하이퍼링크를 통해 이를 해결할 수 있지만, 실제 책을 소지한 독자는 이를 탐색하는 데 더 어려움을 겪을 수 있습니다. 이를 부분적으로 해결하기 위해 텍스트를 '순환적'으로 구성하여 독자가 다양한 지점에서 시작해 읽고, 끝부분에서 '이전' 자료로 되돌아갈 수 있도록 했습니다.
+특히 이 방법을 권장합니다:
 
-특히 다음과 같이 권장합니다:
-- 주제별, 정치적 또는 시사적 관심이 있는 독자는 책의 서문에서 시작하여 쭉 읽어 나가는 것이 좋습니다.
-- 개념적, 이론적 또는 광범위한 지적 관심이 있는 독자는 1부와 2부를 건너뛰고 3부에서 시작하는 것이 좋습니다.
-- 기술적, 기술적 또는 공학적 초점이 있는 독자는 4부에서 시작하는 것이 좋습니다.
-- 구체적인 기술 및 그 응용에 관심이 있는 독자는 5부에서 시작하는 것이 좋습니다.
-- 특정 사회 부문에서의 실제 영향에 관심이 있는 독자는 6부에서 시작하는 것이 좋습니다.
-- 공공 정책, 정부 및 사회 동원에 초점을 맞춘 독자는 7부에서 시작하는 것이 좋습니다.
+- 주로 시사, 정치 또는 **시사**에 관심이 있는 사람은 책의 서문부터 시작하여 곧바로 읽으세요.
 
-시작 지점에 관계없이, 대부분의 독자는 시작한 곳에서 가치를 발견하면 계속 읽어 나가고, '나중' 부분의 이론적 프레임워크를 이전 자료로 채우는 것이 유익하다고 느낄 것입니다.
+- 개념적, 이론적 또는 폭넓은 **지적** 관심이 있는 분들은 1부와 2부를 건너뛰고 3부부터 시작하는 것을 고려하세요.
 
-이 책은 살아있는 문서입니다. 인쇄본을 읽고 있다면 최신 정보가 아닐 가능성이 높으므로 https://www.plurality.net/에서 최신 버전을 읽거나 무료로 다운로드할 수 있습니다.
+- 보다 **기술적**, 기술적 또는 공학적 관심이 있는 분들은 4부부터 시작하는 것이 좋습니다.
 
-더 중요한 것은, 독자 여러분이 이 프로젝트의 협력자로 참여해 주시기를 바랍니다. 텍스트에 대한 문제나 개선 사항을 '이슈'로 제출하여 커뮤니티가 우선순위를 정하거나 '풀 리퀘스트'로 수정을 제출할 수 있습니다. 모든 기여는 인정되며, 아래 설명한 대로 기여자에게 인식 및 관리 권한을 부여합니다.
+- 구체적인 기술과 그 **응용**에 관심이 있는 분은 파트 5부터 시작하는 것이 좋습니다.
 
-우리가 실수했다면 그것을 초대장으로 받아들여 주세요. 우리가 틀렸다고 생각하면 바로 잡아 주세요. 우리의 언어가 여러분의 커뮤니티와 맞지 않다면 여러분의 언어로 된 버전을 만들어 주세요. 커뮤니티와 관계를 맺고 싶지 않다면, 자료에는 저작권이 없으므로 원하는 것을 가져가고 나머지는 남겨 두세요. "왜 아무도 이것을 하지 않나요?"라고 묻지 마세요. 여러분이 바로 그 '아무도'입니다.
+- 특정 사회 분야의 실제 **영향력**에 관심이 있다면 파트 6부터 시작하는 것이 좋습니다.
+
+- 공공 **정책**, 정부 및 사회 동원에 관심이 있는 분들은 파트 7부터 시작하는 것이 좋습니다.
+
+어디서부터 시작하든 가치를 발견하는 대부분의 독자는 계속 읽으면서 책의 '뒷부분'의 이론적 틀을 앞부분의 자료로 반복해서 채워나가는 것이 가치 있을 것으로 기대합니다.
+
+이 책은 살아있는 문서입니다.  인쇄본을 읽고 있다면 이미 구식이 되어 있을 가능성이 높으므로 https://www.plurality.net/ 에서 최신 버전을 읽거나 무료로 다운로드할 수 있습니다.
+
+더 중요한 것은 여러분 자신을 단순한 독자가 아니라 이 프로젝트의 협력자로 생각해주셨으면 좋겠습니다.  언제든지 커뮤니티에서 우선순위를 정할 수 있도록 본문에 대한 우려 사항이나 문제('이슈')를 제출하거나 커뮤니티에서 검토할 수 있도록 수정 사항('풀 리퀘스트')을 https://github.com/pluralitybook/plurality 에 제출할 수 있습니다.  [모든 기여는 크레딧으로 인정되며(https://github.com/pluralitybook/plurality/blob/main/docs/Gov4Git%20and%20PMP.md), 아래에 설명된 대로 기여자 인정 및 거버넌스 권한을 얻게 됩니다.
+
+저희가 실수를 했다면 초대로 받아들여주세요.  저희가 틀렸다고 생각되면 바로잡아 주세요.  커뮤니티의 언어로 번역되지 않았다면 해당 언어로 번역된 버전을 만들어 주세요.  커뮤니티와 거래하고 싶지 않다면 해당 자료에는 저작권이 없으므로 원하는 것만 가져가고 나머지는 남겨두세요.  *"왜 아무도 이 일을 하지 않나요?"라고 묻지 마세요. 여러분이 바로 아무도 아닌 사람입니다.
