--- a/contents/korean/0-0-추천사.md
+++ b/contents/korean/0-0-추천사.md
@@ -4,186 +4,206 @@
 
 >
 
-> 광활하고 무한한 *다원성*의 세계에서, 각 삶은 고유하고 소중한 존재입니다.외부 상황이 아무리 위험할지라도..(우리 함께) 공유된 선함의 씨앗이 땅을 뚫고 나와 공감, 기쁨, 조화의 꽃으로 피어나게 하도록 긍정적인 행동을 취합시다.<br></br>
-— 제14대 [달라이 라마](https://www.dalailama.com/) (티베트)
+> 광활하고 끝없이 펼쳐진 *다양성* 속에서 각 생명은 독특하고 소중한 존재입니다... 외부 환경이 아무리 위험할지라도... 공유된 선의 씨앗이 대지를 뚫고 공감, 기쁨, 화합의 꽃으로 피어날 수 있도록 긍정적인 행동을 취합시다.<br></br>
+- 티베트의 [달라이 라마 14세] 성하(https://www.dalailama.com/)
 
 <br></br>
 
-> 기술이 발전하고 정치적 도전이 있으며 급속히 변화하는 21세기에서, 자유롭고 열린 미래는 어떤 모습일까요? 글렌, 오드리와 그들의 공저자들은 앞으로 나아갈 설득력 있는 길을 제시합니다.<br></br>
-— [비탈릭 부테린](https://en.wikipedia.org/wiki/Vitalik_Buterin), [이더리움](https://ethereum.org/en/) 창립자
+> 기술적으로 진보하고 정치적으로 도전적이며 빠르게 진화하는 21세기에 자유롭고 개방적인 미래는 어떤 모습일까요? 글렌, 오드리와 공동 저자들은 앞으로 나아갈 길에 대한 설득력 있는 견해를 제시합니다.<br></br>
+- 비탈릭 부테린](https://en.wikipedia.org/wiki/Vitalik_Buterin), [이더리움](https://ethereum.org/en/) 창립자
 
 <br></br>
 
-> 민주주의는 상반되는 가치 간의 대립이었습니다. 그러나 대만에서는 다양한 가치 간의 대화로 변모했습니다. 오드리 탕은 이념의 제약을 초월하는 '디지털 민주주의'를 만드는 방법을 보여주었습니다 — 이것이 이 책의 주요 공헌입니다.<br></br>
-— [차이잉원](https://en.wikipedia.org/wiki/Tsai_Ing-wen), 대만 총통
+> 민주주의는 상반된 가치 사이의 대립이었습니다. 하지만 대만에서는 다양한 가치 사이의 대화가 되었습니다. 오드리 탕은 이념의 제약을 뛰어넘는 '디지털 민주주의'를 만드는 방법을 보여줬고, 이것이 이 책의 가장 큰 공헌입니다.<br></br>
+- 차이잉원](https://en.wikipedia.org/wiki/Tsai_Ing-wen), 중화민국 총통(대만)
 
 <br></br>
 
-> 이 책은 기술이 민주주의와 다원주의, 그리고 인간의 광범위한 번영을 지원하는 미래로 가는 문을 열어줍니다. 이 미래가 가능하다는 것을 우리는 알 수 있습니다. 왜냐하면 탕이 대만에서 그것을 구축해 왔기 때문입니다. 여기서 제시된 개념적 기초는 현대 생활을 위한 매우 필요한 패러다임 전환을 가져옵니다.<br></br>
-— [다니엘 S. 앨런](https://en.wikipedia.org/wiki/Danielle_Allen#), 정치 철학자, 하버드대학교 제임스 브라이언 코넌트 석좌교수, 맥아더 펠로우, [*우리의 선언*](https://wwnorton.com/books/Our-Declaration/) 및 [*커즈*](https://wwnorton.com/books/9781631494949) 저자
+> 이 책은 기술이 민주주의, 다원주의, 광범위한 인간 번영을 지원하는 미래로 가는 포털을 제공합니다. 우리는 이 미래가 가능하다는 것을 알고 있습니다. 왜냐하면 당이 대만에서 미래를 건설해왔기 때문입니다. 여기에 놓인 개념적 토대는 현대 생활에 꼭 필요한 패러다임의 변화를 이끌고 있습니다.<br></br>
+- 다니엘 S. 앨런](https://en.wikipedia.org/wiki/Danielle_Allen#), 정치 철학자, 제임스 브라이언 코난 하버드 대학교 교수, 맥아더 펠로우, [*우리 선언*](https://wwnorton.com/books/Our-Declaration/) 및 [*Cuz*](https://wwnorton.com/books/9781631494949)의 저자
 
 <br></br>
 
-> *다원성*은 마치 현실에서 이미 일어나고 있는 낙관적인 SF 소설처럼 읽힙니다. 세계의 민주국가들이 대만의 발자취를 따라 디지털 시대를 위해 자유 사회를 업그레이드할 수 있을까요? 해피 엔딩을 기대해 봅니다.<br></br>
-— [조셉 고든-레빗](https://en.wikipedia.org/wiki/Joseph_Gordon-Levitt), 에미상 수상 예술가이자 [HITRECORD](https://hitrecord.org/) 창립자
+> *복수*는 낙관적인 공상 과학 소설처럼 읽히지만, 이미 현실에서 일어나고 있습니다! 전 세계 민주주의 국가들이 대만의 발자취를 따라 디지털 시대에 걸맞은 자유 사회를 업그레이드할 수 있을까요? 해피엔딩을 기대해봅니다. <br></br>
+- 조셉 고든-레빗, 에미상 수상 작가이자 [HITRECORD](https://hitrecord.org/) 설립자(사진: 조셉 고든-레빗)
 
 <br></br>
 
-> *다원성*은... 아프리카적 관점에서 협력을 가속화할 수 있는 잠재적 글로벌 촉매입니다. 21세기를 아프리카의 세기로 만들기 위해 도전을 받아들인 아프리카 사상가들에게 꼭 읽어야 하고 함께 창작해야 할 책입니다.<br></br>
-— [오비 에젹웨실리](https://en.wikipedia.org/wiki/Oby_Ezekwesili), [국제 투명성 기구](https://www.transparency.org/en) 공동 창립자, [#BringBackOurGirls](https://bringbackourgirls.ng/) 창립자, [정치, 정책 및 거버넌스 학교](https://thesppg.org/our-program/) 및 [#FixPolitics](https://www.fixpolitics.org/) 창립자이자 나이지리아 정치 지도자
+> *복수*는... 진정으로 매혹적인... 잠재적인 글로벌 가속기... 아프리카적 관점의 협업... 21세기를 아프리카의 세기로 만들려는 도전을 받아들인 아프리카 사상가들이 반드시 읽어야 하고 공동 창작해야 할 책입니다.<br></br>
+- 오비 에제퀘실리](https://en.wikipedia.org/wiki/Oby_Ezekwesili), [국제투명성기구](https://www.transparency.org/en), [#BringBackOurGirls](https://bringbackourgirls.ng/) 공동 창립자, [정치, 정책 및 거버넌스 학교](https://thesppg.org/our-program/) 및 [#FixPolitics](https://www.fixpolitics.org/) 설립자, 나이지리아 정치 지도자
 
 <br></br>
 
-> 유머와 박식함, 낙관주의로, 오드리 탕과 그녀의 협력자들은 우리가 디지털 기술을 활용해 권위주의에 맞설 수 있으며, 열린 사회의 원칙에 기대어 이를 할 수 있다고 주장합니다.<br></br>
-— [앤 애플바움](https://en.wikipedia.org/wiki/Anne_Applebaum), [퓰리처상](https://www.pulitzer.org/winners/anne-applebaum) 수상자이자 [*민주주의의 황혼*](https://www.penguinrandomhouse.com/books/621076/twilight-of-democracy-by-anne-applebaum/) 및 [*붉은 기근*](https://www.penguinrandomhouse.com/books/236713/red-famine-by-anne-applebaum/) 저자
+> 오드리 탕과 그녀의 협력자들은 재치, 학식, 낙관주의로 디지털 기술을 활용하여 권위주의에 맞설 수 있으며, 열린 사회의 원칙을 외면하는 것이 아니라 그것에 기대어 그렇게 할 수 있다고 주장합니다.<br></br>
+- 앤 애플바움](https://en.wikipedia.org/wiki/Anne_Applebaum), [퓰리처상](https://www.pulitzer.org/winners/anne-applebaum) 수상자이자 [*민주주의의 황혼*](https://www.penguinrandomhouse.com/books/621076/twilight-of-democracy-by-anne-applebaum/), [*붉은 기근*](https://www.penguinrandomhouse.com/books/236713/red-famine-by-anne-applebaum/)의 저자
 
 <br></br>
 
-> 글렌과 오드리는 팀을 이끌어 고급 컴퓨팅을 인간의 사회적 및 경제적 시스템을 보완하는 데 활용하는 방법을 마스터 클래스에서 보여주며, 디지털 기술이 세계를 어떻게 더 협력적이고 생산적으로 만들 수 있는지를 보여줍니다.<br></br>
-— [마이클 I. 조던](https://en.wikipedia.org/wiki/Michael_I._Jordan), 캘리포니아 대학교 버클리 컴퓨터 과학 및 통계학 교수, [세계 로레이트 협회상](https://www.thewlaprize.org/) 최초 수상자, 2016년 [Science](https://www.science.org/content/article/who-s-michael-jordan-computer-science-new-tool-ranks-researchers-influence) 선정 세계에서 가장 영향력 있는 컴퓨터 과학자
+> 글렌과 오드리는 첨단 컴퓨팅을 활용하여 인간의 사회 및 경제 시스템을 대체하는 것이 아니라 증강하는 방법에 대한 마스터 클래스를 제공하는 팀을 이끌며, 동시에 디지털 기술이 어떻게 세상을 극적으로 더 협력적이고 생산적으로 만들 수 있는지를 보여주고 알려줍니다.<br></br>
+- 마이클 I. 조던](https://en.wikipedia.org/wiki/Michael_I._Jordan), 캘리포니아 버클리 대학교 컴퓨터 과학 및 통계학 석좌교수, [세계 수상자 협회상](https://www.thewlaprize.org/) 컴퓨터 과학 또는 수학 부문 초대 수상자, [*과학*](https://www.science.org/content/article/who-s-michael-jordan-computer-science-new-tool-ranks-researchers-influence)이 2016년 세계에서 가장 영향력 있는 컴퓨터 과학자로 선정한 페홍 첸(Pehong Chen).
 
 <br></br>
 
-> 금융 기술과 디지털 인프라에서 케냐와 다른 아프리카 국가들은 북반구의 구식 모델보다 앞서 있습니다. *다원성*과 함께 우리는 이를 더 깊이 탐구하여 우리의 성장을 가속화하고 보다 포용적이고 참여적이며 생산적인 미래의 글로벌 모델에 참여할 수 있습니다.<br></br>
-— [오리 오콜로-음완기](https://en.wikipedia.org/wiki/Ory_Okolloh), [우샤히디](https://en.wikipedia.org/wiki/Ushahidi) 공동 창립자이자 [Verod-Kepple Africa Ventures](https://vkav.vc/) 파트너
+> 금융 기술과 디지털 인프라 분야에서 케냐와 다른 아프리카 국가들은... 북부의 낙후된 모델보다 앞서 있습니다.  우리는 *복수*를 통해...이를...더 깊이...발전시켜 성장을 가속화하고 보다 포용적이고 참여적이며 생산적인 미래를 위한 글로벌 모델의 일부가 될 수 있습니다. <br></br>
+- 오리 오콜로-망기](https://en.wikipedia.org/wiki/Ory_Okolloh), [우샤히디](https://en.wikipedia.org/wiki/Ushahidi) 공동 설립자 겸 [베로드-케플 아프리카 벤처스](https://vkav.vc/) 파트너
 
 <br></br>
 
-> 자유와 민주주의를 지원해야 했던 디지털 기술이 오히려 잘못된 정보, 극단주의, 감시의 무기가 되었습니다. 이 멋진 책은 대만에서 실제로 적용된 기술적이고 철학적인 전략을 통해 이를 더 잘 할 수 있는 방법을 제시합니다.<br></br>
-— [다론 아제모을루](https://en.wikipedia.org/wiki/Daron_Acemoglu), MIT 경제학 교수, 존 베이츠 클라크 메달 수상자, [*권력과 진보*](https://www.hachettebookgroup.com/titles/daron-acemoglu/power-and-progress/9781541702530/?lens=publicaffairs) 및 [*국가는 왜 실패하는가*](https://en.wikipedia.org/wiki/Why_Nations_Fail) 공동 저자
+> 자유와 민주주의를 지원해야 할 디지털 기술이 잘못된 정보, 극단주의, 감시의 무기로 변질되고 있다.  이 멋진 책은 이 모든 것을 개선하기 위한 기술적, 철학적 전략을 대만의 실제 사례에 기반하여 설명합니다.<br></br>
+- 대런 아세모글루](https://en.wikipedia.org/wiki/Daron_Acemoglu), 엘리자베스와 제임스 킬리안 매사추세츠 공과대학 경제학 교수, 존 베이츠 클라크 메달 수상자이자 [*권력과 진보*](https://www.hachettebookgroup.com/titles/daron-acemoglu/power-and-progress/9781541702530/?lens=publicaffairs), [*왜 국가는 실패하는가*](https://en.wikipedia.org/wiki/Why_Nations_Fail)의 공동 저자입니다.
 
 <br></br>
 
-> 만약 사회 정의 운동에서 우리의 가장 소중한 꿈들이 실현되었다면 세상은 어떤 모습일까요? 저자들은 민주주의를 재발명하기 위한 급진적이지만 실용적인 해결책을 제시합니다. 일부는 이미 실현되어 진정한 변화를 위한 등대 역할을 하고 있습니다.<br></br>
-— [스타브 샤피르](https://en.wikipedia.org/wiki/Stav_Shaffir), [이스라엘 사회 정의 시위](https://en.wikipedia.org/wiki/2011_Israeli_social_justice_protests) 지도자이자 Knesset 최연소 여성 의원
+> 사회 정의...운동에 대한 우리의 소중한 꿈이 실현된다면 세상은 어떤 모습일까요?  (그들은)...민주주의를 재창조하고...(진정으로) 국민에게 봉사하기 위한...급진적이면서도 실용적인 해결책을 제시합니다...일부는...실행되어...진정한 변화를 위한...등대 역할을 하고 있습니다.<br></br>
+- 스타브 샤피르](https://en.wikipedia.org/wiki/Stav_Shaffir), [이스라엘 사회정의 시위](https://en.wikipedia.org/wiki/2011_Israeli_social_justice_protests)의 지도자이자 최연소 여성 크네세트 의원.
+
+
 
 <br></br>
 
-> 너무 오랫동안, 다양성과 기술은 세속화 세력에 의해 칼로 사용되었습니다. 그러나 이 저자들의 능숙한 손에서는 그것들이 신앙을 위한 방패로 다시 만들어졌습니다.<br></br>
-— [존니 무어 주니어 목사](https://en.wikipedia.org/wiki/Johnnie_Moore_Jr.), [크리스천 리더스 의회](https://congressofchristianleaders.com/) 회장, 전 미국 국제 종교 자유 위원회 위원 및 전 미국 대통령 도널드 트럼프의 비공식 고문
+> 너무 오랫동안 다양성과 기술은 세속화 세력에 의해 칼처럼 사용되어 왔습니다.  놀랍게도, 이 저자들의 숙련된 손을 거쳐 신자들을 위한 방패로 재탄생했습니다.<br></br>
+- 조니 무어 주니어 목사](https://en.wikipedia.org/wiki/Johnnie_Moore_Jr.), [기독교지도자협의회](https://congressofchristianleaders.com/) 회장, [미국 국제종교자유위원회](https://en.wikipedia.org/wiki/United_States_Commission_on_International_Religious_Freedom) 전 위원, 도널드 트럼프 미국 대통령의 비공식 자문위원.
 
 <br></br>
 
-> 오드리 탕은 선구적인 리더로서의 새로운 기준을 세웠습니다. 그녀가 여기서 매우 설득력 있게 설명한 길을 따를 용기를 가지길 바랍니다.<br></br>
-— [클라우디아 로페즈 에르난데스](https://en.wikipedia.org/wiki/Claudia_L%C3%B3pez), 보고타 전 시장이자 첫 여성 시장, 글로벌 남반구에서 최고 LGBT 선출 공직자
+> 오드리 탕은 선구적인 리더의 의미에 대한 새로운 기준을 제시합니다. 그녀가 이 책에서 설득력 있게 제시하는 것처럼 우리 모두가 그녀의 길을 따라갈 용기를 가지길 바랍니다. <br></br>
+- 클라우디아 로페즈 에르난데스](https://en.wikipedia.org/wiki/Claudia_L%C3%B3pez), 콜롬비아 보고타의 전 시장 겸 최초의 여성 시장이자 글로벌 남부에서 가장 높은 성소수자 선출직 공직자
 
 <br></br>
 
-> 기술이 미래의 문화와 민주주의에 미칠 영향은 명백합니다. 우리는 그것들과 함께 살아가는 다원적 비전이 부족합니다! 다행히도 이 책은 그 원칙을 구현하고 있습니다. 마치 AI처럼, 이 책은 부분의 합보다 더 위대한 기념비적 공동 성취입니다.<br></br>
-— [홀리헌든](https://en.wikipedia.org/wiki/Holly_Herndon), 음악가, 예술가, [*Interdependence*](https://interdependence.fm/) 공동 호스트 및 [Spawning](https://spawning.ai/) 공동 창립자
+> 기술이 문화와 민주주의의 미래에 영향을 미칠 것은 분명합니다. 우리는 그들과 함께 살아가는 다원주의적... 비전이 부족합니다! 다행히도 이 책은 이 책이 옹호하는 원칙을 구체화합니다. 인공지능과 마찬가지로, 이 책은 부분의 합보다 더 큰 기념비적인 집단적 성취입니다.<br></br> 
+- 홀리 허든](https://en.wikipedia.org/wiki/Holly_Herndon), 음악가, 예술가, [*Interdependence*](https://interdependence.fm/) 공동 진행자, [Spawning](https://spawning.ai/) 공동 설립자
 
 <br></br>
 
-> 오드리 탕과 글렌 웨일의 프로젝트는 대만(및 다른 나라들)이 새로운 사회 민주주의 방향으로 나아가는 데 효과적이고 의미 있는 역할을 할 것입니다.<br></br>
-— [가라타니 고진](https://en.wikipedia.org/wiki/Kojin_Karatani), [*세계사의 구조*](https://www.dukeupress.edu/the-structure-of-world-history) 저자이자 버그루엔 문화 철학상 수상자
+> 오드리 탕과 글렌 웨일의 프로젝트는 대만(및 다른 국가)이 새로운 사회 민주주의의 방향으로 나아가는 데 효과적이고 의미 있는 도움이 될 것입니다. <br></br>
+- 가라타니 고진](https://en.wikipedia.org/wiki/Kojin_Karatani), [*세계사의 구조*](https://www.dukeupress.edu/the-structure-of-world-history)의 저자이자 베르그그루엔 문화철학상 수상자
 
 <br></br>
 
-> *다원성*은 대만의 탄력적인 디지털 전환의 강력한 청사진을 공개합니다... 이는 전 세계의 관심 있는 시민들에게 귀중한 통찰력을 제공하며, 자유와 열린 사회를 위한 역사적으로 불안한 순간 속에서 민주주의를 지키는 데 도움이 될 수 있습니다.<br></br>
-— [프랭크 맥코트](https://en.wikipedia.org/wiki/Frank_McCourt_(executive)), [McCourt Global](https://www.mccourt.com/) 및 [Project Liberty](https://www.projectliberty.io/) 창립자, [*우리의 가장 큰 싸움*](https://ourbiggestfight.com/) 공동 저자
+> *복수*는 대만의 탄력적인 디지털 전환에 대한 강력한 청사진을 공개합니다...전 세계의 우려하는 시민들에게 귀중한 통찰력을 제공하고...전 세계의 자유와 열린 사회를 위한 역사의 위태로운 순간 속에서 민주주의를 보존하는 데 도움이 될 수 있습니다.<br></br>
+- 프랭크 맥코트](https://en.wikipedia.org/wiki/Frank_McCourt_(임원)), [맥코트 글로벌](https://www.mccourt.com/) 및 [프로젝트 리버티](https://www.projectliberty.io/) 설립자이자 [*우리의 가장 큰 싸움*](https://ourbiggestfight.com/)의 공동 저자입니다.
 
 <br></br>
 
-> 새로운 게임의 규칙을 읽고 그들이 만드는 세상을 상상하는 것은 흥미롭습니다; 여기서 그 흥분을 느낄 수 있지만, 게임은 국제 문제와 공동체의 협력 방식입니다. 환상적입니다!<br></br>
-— [리처드 가필드](https://en.wikipedia.org/wiki/Richard_Garfield), [*매직: 더 개더링*](https://en.wikipedia.org/wiki/Magic:_The_Gathering) 창시자
+> 새로운 게임의 규칙을 읽고 그 규칙이 만들어낼 세상을 상상하는 것은 짜릿한 일이지만, 게임은 글로벌 문제이고 커뮤니티가 함께 일하는 방식입니다. 환상적입니다!<br></br> 
+- 리차드 가필드](https://en.wikipedia.org/wiki/Richard_Garfield), [*매직: 더 개더링*](https://en.wikipedia.org/wiki/Magic:_The_Gathering) 제작자
 
 <br></br>
 
-> 저자들은 숨 막히는 가능성의 멋진 책을 썼으며, 어두운 시대에 희망을 제시합니다. 수학에서 문학에 이르기까지 다양한 학문을 활용하여 독자들은 많은 것을 생각하고 도전할 수 있습니다. 독자들은 이 대화에 참여하도록 초대됩니다!<br></br>
-— [앤 마리 슬로터](https://en.wikipedia.org/wiki/Anne-Marie_Slaughter), [뉴 아메리카 재단](https://www.newamerica.org/) CEO, 전 미국 국무부 정책기획국장, [*미완성 업무*](https://www.penguinrandomhouse.com/books/225053/unfinished-business-by-anne-marie-slaughter/) 및 [*체스 보드와 웹*](https://yalebooks.yale.edu/book/9780300234664/the-chessboard-and-the-web/) 저자
+> (저자들은) 수학과 문학에 이르는 학문을 바탕으로...암울한 시대에 희망을 제시하는...숨막히는 가능성에 대한 훌륭한 책을 썼다...독자들은 숙고하고 도전할 많은 것을 발견할 수 있을 것이다...(그리고) 대화에 초대한다!
+<br></br>
+- 앤 마리 슬러터](https://en.wikipedia.org/wiki/Anne-Marie_Slaughter), [뉴 아메리카 재단](https://www.newamerica.org/) CEO, 전 미국 국무부 정책기획국장, [*미완성 사업*](https://www.penguinrandomhouse.com/books/225053/unfinished-business-by-anne-marie-slaughter/), [*체스판과 웹*](https://yalebooks.yale.edu/book/9780300234664/the-chessboard-and-the-web/)의 저자
 
 <br></br>
 
-> 기뻐하세요! 이 책은 우리가 가능하다고 의심했던 인본주의적 첨단 기술 미래를 엿볼 수 있는 창의적인 폭발을 제공합니다.<br></br>
-— [자론 레니어](https://en.wikipedia.org/wiki/Jaron_Lanier), 가상 현실의 발명자, [*누가 미래를 소유하는가?*](https://en.wikipedia.org/wiki/Who_Owns_the_Future%3F) 및 [*모든 것의 새로운 시작*](https://us.macmillan.com/books/9781250097408/dawnoftheneweverything) 저자, 마이크로소프트 최고 기술 책임자(CTO) 사무실의 통합 과학자
+> 기뻐하세요! 우리가 불가능하다고 생각했던 인문학적 하이테크의 미래를 엿볼 수 있는 창의성의 폭발이 여기 있습니다.<br></br> 
+- 가상 현실의 발명가이자 [*누가 미래를 소유하는가*](https://en.wikipedia.org/wiki/Who_Owns_the_Future%3F), [*새로운 모든 것의 여명*](https://us.macmillan.com/books/9781250097408/dawnoftheneweverything)의 저자이자 Microsoft의 최고 기술 책임자 프라임 통합 과학자(OCTOPUS)인 [Jaron Lanier](https://en.wikipedia.org/wiki/Jaron_Lanier)의 이야기입니다.
 
 <br></br>
 
-> 마침내, 이론과 실천 모두에서 다원성을 중심으로 하는 책이 나왔습니다. 이 책은 기술과 민주주의의 관계를 탐색하고 새로운 전략을 개발하기 위한 매우 필요한 지침을 제공합니다. 그리고 서구적 틀을 넘어서 생각하도록 도와줍니다.<br></br>
-— [케이트 크로포드](https://katecrawford.net/), 마이크로소프트 연구소 선임 연구원, 남가주대학 연구 교수, 예술가, 음악가, [*AI의 지도*](https://en.wikipedia.org/wiki/Atlas_of_AI) 저자
+> 마침내 이론과 실무 모두에서 복수의 중심을 잡는 책이 나왔습니다. 이 책은 기술과 민주주의의 관계를 탐색하고 일반적인 서구적 프레임을 넘어서는 새로운 전략을 개발하는 데 꼭 필요한 안내서입니다. <br></br> 
+- 케이트 크로포드](https://katecrawford.net/), 마이크로소프트 리서치 수석 연구원, 서던 캘리포니아 대학교 연구 교수, 예술가, 음악가, [*아틀라스 오브 AI*](https://en.wikipedia.org/wiki/Atlas_of_AI)의 저자
 
 <br></br>
 
-> 첫 장을 읽었고 강력히 추천합니다. 원래 열심히 책을 읽었지만, 요즘은 책에 쉽게 흥미를 잃곤 했습니다. 하지만 이 책은 다시 관심을 끌었습니다. 우리 손에 달린 이 세상에서 종말적이고 남성적인 미래를 막기 위해 꼭 필요한 책입니다.<br></br>
-— [비올레타 아야라](https://en.wikipedia.org/wiki/Violeta_Ayala), 첫 케추아 원주민 출신 아카데미 회원, XR 영화 감독
+> ✈️ 에서 첫 장을 읽었는데, 정말 추천할 만한 책입니다. 예전에는 열렬한 독서가였지만 지금은 책에 지루함을 느끼는 편인데, 이 책은 다시 제 관심을 끌었습니다. 미래에 대한 종말론적인 마초적인 생각을 갖지 않기 위해 꼭 필요한 책입니다. 그건 그렇고, 우리 손에 달려 있습니다. <br></br> 
+- 비올레타 아얄라](https://en.wikipedia.org/wiki/Violeta_Ayala), [오스카](https://www.oscars.org/)의 첫 케추아어 출신 멤버이자 수상 경력에 빛나는 XR 영화 제작자   
 
 <br></br>
 
-> 전 세계 포퓰리스트들은 기술을 사용해 국가를 분열시킵니다. *다원성*은 우리가 기술을 사용해 더 연결되고 인간성을 회복할 수 있는 새로운 여정을 초대합니다. 아프리카에서는 이를 '우분투'라고 부릅니다.<br></br>
-— [무시 마이마네](https://en.wikipedia.org/wiki/Mmusi_Maimane), 남아프리카 공화국 대통령 후보, 전 야당 지도자, [Build One South Africa](https://www.bosa.co.za/) 창립자, 리버티 교회의 목사 및 장로
+> 는 전 세계적으로 기술을 이용해 국가를 분열시키는 부유층... *복수*가 기술을 이용해 단절의 세계에서 그 공간을 되찾아 더 연결되고, 아프리카에서 말하는 인간성, 우분투를 되찾을 수 있는 새로운 여정에 초대합니다. <br></br> 
+- 음무시 마이마네](https://en.wikipedia.org/wiki/Mmusi_Maimane), 남아공 대통령 후보, 전 야당 지도자, [빌드 원 사우스 아프리카](https://www.bosa.co.za/) 설립자, [리버티 교회](https://www.lty.church/)의 목사 겸 장로
 
 <br></br>
 
-> 여기, 비기술적인 명료한 문체로 지난 수십 년 동안 우리가 기술과 사회에 대해 배운 것을 통합하여 민주주의의 미래를 재구성하는 광범위한 비전이 제시되어 있습니다.<br></br>
-— [알렉스 "샌디" 펜틀랜드](https://en.wikipedia.org/wiki/Alex_Pentland), MIT 미디어랩 초대 학술 책임자, 계산 사회과학 및 데이터 과학 창립자
+> 지난 수십 년 동안 우리가 기술과 사회에 대해 배운 많은 것을 통합하여 민주주의의 미래를 다시 만드는 방법에 대한 포괄적인 비전을, 실제로 현장에서 실천하고 있는 사람이 명쾌하고 비기술적인 산문으로 제시합니다.<br></br>
+- 알렉스 "샌디" 펜틀랜드](https://en.wikipedia.org/wiki/Alex_Pentland), MIT 미디어랩의 초대 학술 책임자이자 컴퓨터 사회과학 및 데이터 과학의 창시자
 
 <br></br>
 
-> 이 책은 기술이 우리의 삶을 어떻게 형성했는지, 하고 있는지, 할 것인지, 그리고 해야 하는지에 대한 깊고 새로운 통찰을 제공합니다. 방대한 증거를 바탕으로 다원성을 촉진해야 하는 강력한 주장을 펼칩니다. 모든 이에게 중요한 교훈을 제공합니다.<br></br>
-— [콜린 메이어](https://en.wikipedia.org/wiki/Colin_Mayer), 옥스퍼드 사이드 비즈니스 스쿨 경영학 교수, [*번영: 더 나은 비즈니스가 더 큰 선을 만든다*](https://global.oup.com/academic/product/prosperity-9780198866824?lang=en&cc=sk) 저자
+> 기술이 우리 삶을 형성해왔고, 형성하고 있으며, 형성할 것이며, 형성해야 하는 방식에 대해 접근하기 쉽고 깊고 새로운 통찰력을 제공하는 놀라운 책입니다.  풍부한 증거를 바탕으로 다원성 증진을 지지하는 강력한 사례를 제시합니다... 우리 모두에게 중요한 교훈을 담고 있습니다. <br></br>
+- 콜린 메이어](https://en.wikipedia.org/wiki/Colin_Mayer), 피터 무어스 옥스퍼드 [사이드 경영대학원](https://en.wikipedia.org/wiki/Sa%C3%AFd_Business_School) 경영학 교수이자 [*번영: 더 나은 비즈니스가 더 큰 선을 만든다*](https://global.oup.com/academic/product/prosperity-9780198866824?lang=en&cc=sk)의 저자입니다.  
+
 
 <br></br>
 
-> 인터넷 기술이 단편화를 가속화했다면, 편안한 공존을 이루는 것도 가능해야 합니다. *다원성*은 이를 위한 힌트로 가득합니다.<br></br>
-— [아오노 요시히사](https://www.crunchbase.com/person/yoshihisa-aono), [Cybozu](https://cybozu.co.jp/en/company/) 공동 창립자 및 CEO
+> 인터넷 기술이 파편화를 가속화했다면, 편안한 공존을 이룰 수 있어야 합니다. *다양성*은 이를 위한 힌트로 가득 차 있습니다.<br></br>
+- 아오노 요시히사](https://www.crunchbase.com/person/yoshihisa-aono), [사이보즈](https://cybozu.co.jp/en/company/) 공동 창립자 겸 CEO
 
 <br></br>
 
-> *다원성*은 오늘날의 주요 과제 중 하나인 다양성 속에서 협력과 공유 목적을 구축하는 것에 대한 중요한 책입니다. 저자들은 이 문제를 단순히 정치에서 다루는 것이 아니라 기술, 경제 등 다양한 분야에서 귀중한 통찰을 제공합니다.<br></br>
-— [줄리어스 크레인](https://en.wikipedia.org/wiki/Julius_Krein), [*American Affairs*](https://americanaffairsjournal.org/) 창립자 겸 편집장
+
+<다양성>은 오늘날의 핵심 과제 중 하나인 다양성 속에서 협업과 공동의 목적을 구축하는 것에 관한 중요한 책입니다. 저자는 이 과제를 단순히... 정치적인 측면에서 접근하는 것이 아니라... 기술, 경제 등에 대한 귀중한 통찰을 제공합니다.<br></br>
+- 줄리어스 크라인](https://en.wikipedia.org/wiki/Julius_Krein), [*아메리칸 어페어*](https://americanaffairsjournal.org/) 창립자 겸 편집장
 
 <br></br>
 
-> 대만, 세계에서 가장 저평가된 민주주의에서 영감을 받아, *다원성*은 디지털 기술을 활용해 더 민주적인 미래를 만들 수 있다는 강력한 주장을 펼칩니다. 이 훌륭한 책을 읽은 후 새로운 긴급감을 느꼈지만, 동시에 진정한 희망의 이유를 제공받았습니다.<br></br>
-— [스티븐 레비츠키](https://en.wikipedia.org/wiki/Steven_Levitsky), 하버드 대학교 정치학 교수, [*어떻게 민주주의가 죽는가*](https://www.penguinrandomhouse.com/books/562246/how-democracies-die-by-steven-levitsky-and-daniel-ziblatt/) 및 [*소수의 폭정*](https://www.penguinrandomhouse.com/books/706046/tyranny-of-the-minority-by-steven-levitsky-and-daniel-ziblatt/) 공동 저자
+> 세계에서 가장 저평가된 민주주의 국가인 대만에서 영감을 얻은 *복수성*은 디지털 기술을 활용해...보다 민주적인 미래를 촉진할 수 있다는 강력한 사례를 제시한다...이 훌륭한 책을 읽고...새로운 긴박감을 느꼈지만 희망의 진정한 이유도 제시했다.  
+<br></br>
+- 스티븐 레빗스키](https://en.wikipedia.org/wiki/Steven_Levitsky), 데이비드 로커펠러 하버드대 정부학 교수, [*민주주의는 어떻게 죽는가*](https://www.penguinrandomhouse.com/books/562246/how-democracies-die-by-steven-levitsky-and-daniel-ziblatt/), [*소수의 횡포*](https://www.penguinrandomhouse.com/books/706046/tyranny-of-the-minority-by-steven-levitsky-and-daniel-ziblatt/) 공동 저자
 
 <br></br>
 
-> 불안과 분열의 시대에, 글렌 웨일과 오드리 탕은 기술과 민주주의가 조화롭게 어우러져 더 나은 미래로 나아갈 수 있는 드문, 현실적인 비전을 제공합니다.<br></br>
-— [트리스탄 해리스](https://en.wikipedia.org/wiki/Tristan_Harris), [인간 기술 센터](https://en.wikipedia.org/wiki/Center_for_Humane_Technology) 공동 창립자, 다큐멘터리 [*소셜딜레마*](https://www.thesocialdilemma.com/) 주연
+> 불안과 분열의 시대에 글렌 웨일과 오드리 탕은 기술과 민주주의가 어떻게 조화를 이루고 더 나은 미래로 나아갈 수 있는지에 대한 보기 드물게 근거 있는 비전을 제시합니다. <br></br> 
+- 트리스탄 해리스](https://en.wikipedia.org/wiki/Tristan_Harris), [휴먼테크놀로지센터](https://en.wikipedia.org/wiki/Center_for_Humane_Technology)의 공동 설립자이자 [*사회적 딜레마*](https://www.thesocialdilemma.com/)의 출연자
 
 <br></br>
 
-> 세계의 가장 근본적인 문제들에 대해 발전할 수 있는 흥미롭고 창의적이며 도전적인 아이디어들로 가득한 책입니다. 이 책을 읽고 나면 결코 같은 방식으로 생각하지 못할 것입니다.<br></br>
-— [제이슨 퍼만](https://en.wikipedia.org/wiki/Jason_Furman), 전 경제자문위원회 의장, 하버드대학교 경제정책 교수
+
+> 세계에서 가장 근본적인 문제를 해결하는 방법에 대한 흥미롭고 창의적이며 도발적인 아이디어가 가득합니다. 이 책을 읽고 나면 다시는 같은 방식으로 생각하지 않을 것입니다.<br></br>
+- 제이슨 퍼먼](https://en.wikipedia.org/wiki/Jason_Furman), 전 경제자문위원회 의장, 하버드대학교 경제정책실무 교수 겸 애트나 교수
 
 <br></br>
 
-> 이 책은 대만을 세계의 중심에 놓습니다. 대만은 갈등의 중심이 될 것인가, 아니면 평화와 인간성, 기술의 민주화 혁명의 정점이 될 것인가? 이것이 우리의 세기의 질문입니다. 탕과 웨일, 그리고 그들의 협력자들은 그 해답을 찾는 가이드를 작성했습니다.<br></br>
-— [마이클 하틀리 프리드먼](https://en.wikipedia.org/wiki/Michael_Freedman), [필즈 메달](https://en.wikipedia.org/wiki/Fields_Medal), [맥아더 펠로우십](https://www.macfound.org/programs/awards/fellows/) 및 [국가 과학 메달](https://en.wikipedia.org/wiki/National_Medal_of_Science) 수상자, 전 마이크로소프트 스테이션 Q 양자 컴퓨팅 연구소장
+> (이 책은... 대만을 세계의 중심에 놓는다. 분쟁의 구심점이 될 것인가, 아니면 평화, 인류, 기술의 민주화 혁명의 정점이 될 것인가? 이것이 우리 세기의 질문입니다. 탕과 웨일, 그리고 그들의 협력자들이 그 해답을 찾기 위한 안내서를 썼습니다.<br></br> 
+- 마이클 하틀리 프리드먼](https://en.wikipedia.org/wiki/Michael_Freedman), [필즈 메달](https://en.wikipedia.org/wiki/Fields_Medal), [맥아더 펠로우십](https://www.macfound.org/programs/awards/fellows/), [국가 과학 훈장](https://en.wikipedia.org/wiki/National_Medal_of_Science) 수상자이자 전 마이크로소프트의 [스테이션 Q](https://news.microsoft.com/stories/stationq/) 양자 컴퓨팅 연구 부서 책임자
 
 <br></br>
 
-> 마침내 인류 발전의 미래에 대한 비전이 과거에 확고히 뿌리내려져 있음을 보게 되어 기쁩니다. *다원성*은 인간 다양성에 내재된 풍부한 에너지를 활용하여 다음 100년의 경제 성장을 견인할 엔진을 구축하기 위한 틀을 제공합니다.<br></br>
-— [오데드 갈로르](https://www.odedgalor.com/), [*인류의 여정*](https://www.odedgalor.com/copy-of-unified-growth-theory) 저자, 브라운 대학교 경제학 교수
+
+> 인류 발전의 미래에 대한 비전이 과거에 명확하게 근거를 두고 있는 것을 마침내 보게 되어 기쁩니다.  플루리티를 통해 우리는 인류의 다양성에 잠재된 풍부한 에너지를 활용하여 향후 100년간의 경제 성장을 이끄는 엔진을 구축할 수 있는 프레임워크를 갖게 되었습니다.<br></br> 
+- 오데드 갤러](https://www.odedgalor.com/), *[인류의 여정](https://www.odedgalor.com/copy-of-unified-growth-theory)*의 저자, 허버트 골드버거 브라운 대학교 경제학 교수
 
 <br></br>
 
-> 낙관적이면서도 실용적인 *다원성*은 AI 시대를 위한 민주주의를 재구성하는 로드맵을 제공합니다... 우리는 자유주의적 또는 권위주의적 비전에만 국한될 필요가 없습니다. 개방성, 다원성, 인간 정신에 기댄 제3의 길을 제시합니다. 정말 읽을 가치가 있습니다!<br></br>
-— [마크 서먼](https://en.wikipedia.org/wiki/Mark_Surman), [모질라 재단](https://en.wikipedia.org/wiki/Mozilla_Foundation) 회장 겸 전무 이사
+> 낙관적이면서도 실용적인 *복수성*은 인공지능 시대의 민주주의를 재건하기 위한 로드맵을 제시한다... 우리는 자유주의나 권위주의적 비전으로 제한할 필요가 없다... 개방성, 복수성, 인간 정신에 기대는 제3의 길...을 모색해야 한다. 읽을 가치가 있습니다!<br></br>
+- 마크 서먼](https://en.wikipedia.org/wiki/Mark_Surman), [모질라 재단](https://en.wikipedia.org/wiki/Mozilla_Foundation) 사장 겸 전무이사 
 
 <br></br>
 
-> 공공 부문이 사회의 다른 부분만큼 빠르게 신흥 기술을 활용할 수 있을까요? 오드리 탕은 대만에서 실제로 그렇게 해왔고, 여기서 그녀는 여러분이 동일한 일을 할 수 있도록 가르칩니다.<br></br>
-— [슐로밋 와그만](https://cyber.harvard.edu/people/shlomit-wagman), 전 [이스라엘 자금세탁 및 테러자금조달 방지국](https://www.gov.il/en/departments/impa/govil-landing-page) 및 [개인정보보호국](https://www.gov.il/en/departments/the_privacy_protection_authority/govil-landing-page) 국장
+> 공공 부문이 사회의 다른 부문만큼 빠르게 새로운 기술을 활용할 수 있을까요?  오드리 탕이 현장에서 그 가능성을 보여줬으며, 여기서 그 방법을 알려드립니다.<br></br>
+- 이스라엘 자금세탁 및 테러자금조달금지청](https://www.gov.il/en/departments/impa/govil-landing-page) 및 [개인정보 보호청](https://www.gov.il/en/departments/the_privacy_protection_authority/govil-landing-page)의 전 사무총장인 [Shlomit Wagman](https://cyber.harvard.edu/people/shlomit-wagman)
 
 <br></br>
 
-> 기술이 인간을 능가할 것이라는 두려움을 불러일으킵니다. 이 기념비적인 책은 그에 대한 대담하고 설득력 있는 대안을 제공합니다. 웨일과 탕은 기술이 다원적 세계를 발전시키고 관계를 강화하며 다양한 사람들을 하나로 모을 수 있는 방법을 제시합니다.<br></br>
-— [마이크 쿱잔스키](https://omidyar.com/omidyar_team/mike-kubzansky/), [오미디야르 네트워크](https://omidyar.com/) CEO
+> (중략)... 기술이 인간을 어떻게 추월할지에 대한 두려움을 불러일으킨다. 이 중요한 책은... 설득력 있고 대담한 대안을 제시합니다. 웨일과 탕은...기술이 어떻게 다원주의적 세계를 발전시켜 관계를 강화하고 다양성을 넘어 사람들을 하나로 묶을 수 있는지 제시합니다. <br></br>
+- 마이크 쿠잔스키](https://omidyar.com/omidyar_team/mike-kubzansky/), [오미디야르 네트워크](https://omidyar.com/) CEO
+
 
 <br></br>
 
-> 설계, 실행, 내용 면에서 비전이 넘치는 책입니다.<br></br>
-— [브래드 카슨](https://en.wikipedia.org/wiki/Brad_Carson), [털사 대학교](https://utulsa.edu/) 총장, [Americans for Responsible Innovation](https://responsibleinnovation.org/) 회장, 전 미국 하원 의원 및 육군 차관
+> 디자인, 실행 및 실체에서 (V)isionary.<br></br>
+- 브래드 카슨](https://en.wikipedia.org/wiki/Brad_Carson), [털사 대학교](https://utulsa.edu/) 및 [책임 있는 혁신을 위한 미국인](https://responsibleinnovation.org/) 총장, 미국 하원의원 겸 육군 차관보
 
 <br></br>
 
-> '규제'는 우리의 기술 봉건 주인들을 길들이는 경로로서 여전히 요원합니다. 이는 권력을 분산시키는 데 성공하지 못할 것입니다. *다원성*은 우리에게 다른 길을 제시합니다 - 개방적이고 민주적인 방식으로 이 권력을 우회하고 중재합니다.<br></br>
-— [크리스티나 카파라](https://cristinacaffarra.com/), [유니버시티 칼리지 런던](https://profiles.ucl.ac.uk/77797-cristina-caffarra) 명예 교수, [CEPR 경쟁 연구 정책 네트워크](https://cepr.org/about/people/cristina-caffarra) 공동 창립자
+> "규제"는 우리의 기술 봉건적 주인을 길들이는 길로 여전히 애매합니다. 권력을 분산시키는 데 성공하지 못할 것입니다. *다수의견*은 이러한 권력을 우회하고 중간에서 배제하기 위해 우리가 가야 할 다른 길, 즉 개방적이고 민주적인 길을 제시합니다.<br></br>
+- 크리스티나 카파라](https://cristinacaffarra.com/), [유니버시티 칼리지 런던](https://profiles.ucl.ac.uk/77797-cristina-caffarra) 명예교수 겸 [경쟁연구정책네트워크](CEPR) 공동설립자(https://cepr.org/about/people/cristina-caffarra)
 
 <br></br>
 
-> *다원성*은 기술 시대의 사회 철학입니다... 자유주의와 기술주의를 넘어선 제3의 길입니다. 그 본질은 혼돈의 가장자리에서 생명의 출현에 있습니다. 이 이상이 실현될지는 이 책의 독자들이 그 가장자리에 뛰어드는 진정한 활동가가 되는지 여부에 달려 있습니다.<br></br>
-— [스즈키 켄](https://www.linkedin.com/in/ken-suzuki-03489/), SmartNews, Inc. 공동 창립자 겸 이사회 의장, 선전 투자 통화 시스템(PICSY) 발명가
-```
+> *다양성*은 기술 시대의 사회 철학으로, 자유주의와 기술주의를 넘어서는 제3의 길이다. 그 본질은 혼돈의 가장자리에서 삶의 출현에 있으며, 이 이상 실현 여부는 이 책의 독자들이 그 가장자리로 뛰어드는 진정한 활동가가 되느냐에 달려 있다.<br></br>
+- 켄 스즈키](https://www.linkedin.com/in/ken-suzuki-03489/), 스마트뉴스 공동창립자 겸 회장, [전파적 투자 통화 시스템(PICSY)](https://nameteki.kensuzuki.org/english)의 발명가.
+
+
+
+
+
+
+
+
+
+
+
+
