--- a/contents/korean/0-0-추천사.md
+++ b/contents/korean/0-0-추천사.md
@@ -10,7 +10,7 @@
 <br></br>
 
 > 기술적으로 진보하고 정치적으로 도전적이며 빠르게 진화하는 21세기에 자유롭고 개방적인 미래는 어떤 모습일까요? 글렌, 오드리와 공동 저자들은 앞으로 나아갈 길에 대한 설득력 있는 견해를 제시합니다.<br></br>
-- 비탈릭 부테린](https://en.wikipedia.org/wiki/Vitalik_Buterin), [이더리움](https://ethereum.org/en/) 창립자
+- [비탈릭 부테린](https://en.wikipedia.org/wiki/Vitalik_Buterin), [이더리움](https://ethereum.org/en/) 창립자
 
 <br></br>
 
